syntax = "proto3";
package dysonprotocol.script.v1;

import "gogoproto/gogo.proto";

option go_package = "dysonprotocol.com/x/script/types";

// Params defines the parameters for the script module.
message Params {
  // max_relative_historical_blocks defines the maximum number of historical
  // blocks relative to the current block height that must be kept by nodes for
  // script queries. For example, if this value is 1000 and the current height
  // is 5000, nodes must be able to query blocks back to height 4000.
  int64 max_relative_historical_blocks = 1
      [ (gogoproto.moretags) = "yaml:\"max_relative_historical_blocks\"" ];

  // absolute_historical_block_cutoff defines the lowest absolute block height
  // that nodes are required to have when max_relative_historical_blocks is
  // enforced. This parameter is used when params are updated so that if
  // MaxRelativeHistoricalBlocks is increased, nodes are not suddenly required
  // to retroactively have historical blocks that predate this cutoff. When
  // MaxRelativeHistoricalBlocks validation occurs, the oldest required block
  // height will be max(current_height - max_relative_historical_blocks,
  // absolute_historical_block_cutoff).
  int64 absolute_historical_block_cutoff = 2
      [ (gogoproto.moretags) = "yaml:\"absolute_historical_block_cutoff\"" ];
}